# idk-whatitis

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  pytest.ini
src/swij/: __init__.py  main.py
src/swij/config/: settings.py
src/swij/core/: __init__.py  agent.py  execution_engine.py  intent_parser.py  observation.py  pre_check_engine.py  response_synthesizer.py
src/swij/schemas/: actions.py
src/swij/tools/: base.py  branch_tools.py  commit_tools.py  destructive_tools.py  inspection_tools.py  remote_tools.py
src/swij/ui/: renderer.py
tests/unit/: __init__.py  test_intent_parser.py  test_pre_check_engine.py
